# phone-validation-service

./: .bandit.yml  .env  .env.example  .gitignore  .pre-commit-config.yaml  .pre-commit-config.yml  .prospector.yml  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.test.yml  pyproject.toml
scripts/: start-dev.sh  start.sh  stop-dev.sh
src/: main.py
src/api/v1/: main.py
src/api/v1/endpoints/: phone.py
src/core/: __init__.py  config.py
src/db/: __init__.py  base.py  session.py  utils.py
src/models/: __init__.py  phone.py
src/schemas/: __init__.py  phone.py
src/utils/: __init__.py  twilio.py
tests/: test_phone_validation_service.py
tests/core/: test_settings.py
