[tool.poetry]
name = "phone-validation-service"
version = "0.1.0"
description = "Phone validation microservice"
authors = ["Henri Aïdasso <ahenrij@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = {extras = ["dotenv"], version = "^1.9.2"}
fastapi = "^0.81.0"
uvicorn = {extras = ["standard"], version = "^0.18.3"}

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
prospector = {extras = ["with_everything"], version = "^1.7.7"}
pre-commit = "^2.20.0"
black = "^22.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
